--- a/src/Styles/HomePage.module.css
+++ b/src/Styles/HomePage.module.css
@@ -192,23 +192,12 @@
 .transactionFieldsContainerInfo {
   display: flex;
   justify-content: space-between;
-  margin: 0 0 30px 500px;
+  /* margin: 0 0 30px 500px; */
   width: 800px; 
   height: 160px; 
   flex-wrap: wrap;
 }
-/* 
-.transactionFieldsContainer_3 {
-  display: flex;
-  justify-content: space-between;
-  gap: 100px;
-  margin: 0 0 30px 0;
-  margin-top: 50px;
-  width: 800px; 
-  height: 160px; 
-  flex-wrap: wrap;
-} */
-/* Styles/HomePage.module.css */
+
 .mainContainer {
   display: flex;
   justify-content: space-between;
@@ -222,6 +211,7 @@
 .transactionFieldsContainer_3 {
   width: 985px;
   padding-top: 70px;
+  /* margin-left: 365px; */
 }
 
 .transactionFieldsContainerInfo_2 {
