--- a/client/src/Components/Styles/Navbar.module.css
+++ b/client/src/Components/Styles/Navbar.module.css
@@ -1,5 +1,3 @@
-/* Navbar.module.css */
-
 .wrapper {
   width: 100%;
   background-color: #f8f8f8; 
@@ -8,29 +6,26 @@
 }
 
 .logo {
-  width: 60px; /* Adjusted width */
-  height: 54px; /* Adjusted height */
+  width: 60px;
+  height: 54px; 
 }
 
 .logo:hover {
   background-color: #e0e0e0;
 }
 
-/* Контейнер для навигационных ссылок, выравнивание по центру */
 .navbar_nav {
   flex: 1;
   display: flex;
   justify-content: center;
 }
 
-/* Контейнер для элементов авторизации, выравнивание вправо */
 .auth_nav {
   display: flex;
   align-items: center;
-  gap: 10px; /* Расстояние между элементами */
+  gap: 10px; 
 }
 
-/* Для mobile responsive */
 @media (max-width: 767px) {
   .navbar_nav, .auth_nav {
     display: flex;
@@ -71,18 +66,57 @@
 .user_dropdown {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .user_icon {
-  width: 50px; /* Adjust width as needed */
-  height: 50px; /* Adjust height as needed */
-  border-radius: 50%; /* To make the image round */
+  width: 50px; 
+  height: 50px; 
+  border-radius: 50%; 
+  cursor: pointer; 
 }
 
 .dropdown-menu {
-  min-width: 150px; /* Adjust as needed */
+  min-width: 150px; 
+  font-size: 14px;
+  position: absolute; 
+  top: 100%; 
+  left: 0; 
+  z-index: 1000; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  background-color: #fff; 
+  border-radius: 4px; 
+}
+
+.dropdown-menu {
+  max-height: 300px; 
+  overflow-y: auto; 
 }
 
 .dropdown-item {
   font-size: 14px;
+  padding: 10px 15px; 
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #f8f9fa; 
+}
+
+.verticalNav {
+  display: flex;
+  flex-direction: column; /* Вертикальное размещение элементов */
+  gap: 10px; /* Расстояние между элементами */
+}
+
+.navLink {
+  text-decoration: none;
+  color: #333;
+  padding: 10px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.navLink:hover {
+  background-color: #e0e0e0;
 }
