Новые стили входа и регистрации, новое оформление(beta) главной страницы

--- a/client/src/Components/Styles/Admin.module.css
+++ b/client/src/Components/Styles/Admin.module.css
@@ -164,6 +164,7 @@
   transform: translate(-50%, -50%);
   font-size: 48px;
   font-weight: bold;
+  color: #757474;
 }
 
 .centerTextBottom {
@@ -173,6 +174,7 @@
   transform: translate(-50%, -50%);
   font-size: 16px;
   font-weight: bold;
+  color: #757474;
 }
 
 .legend {
